# graphqec-paper

./: .gitignore  LICENSE  README.md  pyproject.toml  test_decoder.ipynb
configs/benchmark/graphqec_time/: BB72.json
graphqec/benchmark/: evaluate.py  utils.py
graphqec/decoder/: __init__.py  pymatching.py
graphqec/decoder/nn/: _gated_deltanet.py  models.py  train_utils.py
graphqec/qecc/: __init__.py  code.py  utils.py
graphqec/qecc/ldpc_code/: bbcode.py  eth_code_q.py  eth_utils.py
