[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphqec"
version = "1.0.1"
description = "Quantum Error Correction with graph neural network"
authors = [
    { name = "Gengyuan Hu", email = "hugengyuan@pjlab.org.cn" },
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # machine learning
    "torch==2.6.0",
    "accelerate",
    "flash-linear-attention==0.2.2",
    "causal-conv1d",
    "einops",
    # visualization
    "wandb",
    "tensorboard",
    "matplotlib",
    "ipykernel",
    # QEC tools
    "stim",
    "pymatching",
    "ldpc",
    # slurm tools
    "submitit",
]

[project.urls]
Homepage = "https://github.com/Fadelis98/graphqec-paper"

[tool.setuptools.packages.find]
include = ["graphqec"]